--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
   "name": "venflon",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Lightweight dependency injection framework for Frontend/Backend",
   "main": "dist/venflon.js",
   "types": "index.d.ts",
   "devDependencies": {
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.8",
-    "babel-core": "^6.22.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "dts-bundle": "^0.7.2",
-    "mocha": "^3.3.0",
-    "mocha-webpack": "^0.7.0",
-    "raw-loader": "^0.5.1",
-    "ts-loader": "1.3.3",
-    "typescript": "2.2.1",
-    "webpack": "2.3.1",
-    "webpack-node-externals": "^1.5.4"
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.8",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "mocha": "7.2.0",
+    "mochapack": "^2.0.3",
+    "raw-loader": "^4.0.2",
+    "ts-loader": "^8.0.5",
+    "typescript": "^4.0.3",
+    "webpack": "^5.1.0",
+    "webpack-cli": "^4.0.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
-    "prepublish": "webpack -p",
-    "test": "mocha-webpack",
-    "build": "webpack"
+    "test": "mochapack --mode development --colors --webpack-config ./config/webpack.test.js \"(test/**/*.js|test/**/*.ts)\"",
+    "build": "webpack --mode production"
   },
   "author": "Grzegorz Godlewski <gg@gitgis.com>",
   "license": "MIT"
